--- a/src/employer-view/search-service.html
+++ b/src/employer-view/search-service.html
@@ -30,7 +30,155 @@
                     <div class="bg-white shadow rounded-3 pt-3 px-2 pb-36 px-lg-20">
                       <h1 class="h1 fw-bolder">Search for Service Providers</h1>
                       
-                      
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <h6 class="fsz-18 mb-20">
+                            Invite Contractors
+                          </h6>
+
+                          <form class="form">
+                            <div class="mb-3">
+                              <div class="row justify-content-center align-items-center g-2">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label class="col-form-label py-0">Type</label>
+                                </div>
+                                <div class="col-sm-8 col-lg-7">
+                                  <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="type1">
+                                    <label class="form-check-label" for="type1">
+                                      <small class="fw-normal">Provider Individual</small>
+                                    </label>
+                                  </div>
+                                  <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="type2">
+                                    <label class="form-check-label" for="type2">
+                                      <small class="fw-normal">Provider Company</small>
+                                    </label>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="mb-3">
+                              <div class="row justify-content-center align-items-center g-2">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label class="col-form-label py-0">Expertise</label>
+                                </div>
+                                <div class="col-sm-8 col-lg-7">
+                                  <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="Expertise1">
+                                    <label class="form-check-label" for="Expertise1">
+                                      <small class="fw-normal">Expertise 1</small>
+                                    </label>
+                                  </div>
+                                  <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="Expertise">
+                                    <label class="form-check-label" for="Expertise">
+                                      <small class="fw-normal">Expertise 2</small>
+                                    </label>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="mb-3">
+                              <div class="row justify-content-center align-items-center g-2">
+                                <div class="col-sm-4 col-lg-5 text-start mb-2 mb-sm-0">
+                                  <label class="col-form-label py-0">Experience</label>
+                                </div>
+                                <div class="col-sm-8 col-lg-7">
+                                  <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="Experience1">
+                                    <label class="form-check-label" for="Experience1">
+                                      <small class="fw-normal">Experience 1</small>
+                                    </label>
+                                  </div>
+                                  <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="Experience">
+                                    <label class="form-check-label" for="Experience">
+                                      <small class="fw-normal">Experience 2</small>
+                                    </label>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="text-center pt-2">
+                              <button type="submit" class="btn btn-primary">
+                                Search
+                              </button>                              
+                            </div>
+                          </form>
+                        </div>
+
+                        <div class="col-lg-6">
+                          <h6 class="fsz-18 mb-20">
+                            Invite Contractors
+                          </h6>
+
+                          <div>
+                            <div class="card mb-10">
+                              <div class="card-body py-14 px-4">
+                                <a href="#" class="d-block text-reset text-decoration-none">
+                                  <span class="d-flex align-items-center justify-content-between">
+                                    <span class="card-text">
+                                      GCPL
+                                    </span>
+                                    <span class="text-light">
+                                      <svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg>
+                                    </span>
+                                  </span>
+                                </a>
+                              </div>
+                            </div>
+
+                            <div class="card mb-10">
+                              <div class="card-body py-14 px-4">
+                                <a href="#" class="d-block text-reset text-decoration-none">
+                                  <span class="d-flex align-items-center justify-content-between">
+                                    <span class="card-text">
+                                      Himanshu
+                                    </span>
+                                    <span class="text-light">
+                                      <svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg>
+                                    </span>
+                                  </span>
+                                </a>
+                              </div>
+                            </div>
+
+                            <div class="card mb-10">
+                              <div class="card-body py-14 px-4">
+                                <a href="#" class="d-block text-reset text-decoration-none">
+                                  <span class="d-flex align-items-center justify-content-between">
+                                    <span class="card-text">
+                                      S2
+                                    </span>
+                                    <span class="text-light">
+                                      <svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg>
+                                    </span>
+                                  </span>
+                                </a>
+                              </div>
+                            </div>
+
+                            <div class="card mb-10">
+                              <div class="card-body py-14 px-4">
+                                <a href="#" class="d-block text-reset text-decoration-none">
+                                  <span class="d-flex align-items-center justify-content-between">
+                                    <span class="card-text">
+                                      GCPL
+                                    </span>
+                                    <span class="text-light">
+                                      <svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg>
+                                    </span>
+                                  </span>
+                                </a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
