--- a/src/contractor-view/profile.html
+++ b/src/contractor-view/profile.html
@@ -41,9 +41,9 @@
                         <div class="col-md-8 col-lg-7">
                           <form class="form">
                             <div class="mb-0">
-                              <div class="row g-0">
+                              <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-name" class="col-form-label">Name:</label>
+                                  <label for="profile-name" class="col-form-label py-0">Name:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-name" class="form-control" readonly value="Vasyl">
@@ -52,9 +52,9 @@
                             </div>
 
                             <div class="mb-0">
-                              <div class="row g-0">
+                              <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-email" class="col-form-label">E-mail:</label>
+                                  <label for="profile-email" class="col-form-label py-0">E-mail:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-email" class="form-control" readonly value="chernyakvasyl@gmail.com">
@@ -63,9 +63,9 @@
                             </div>
 
                             <div class="mb-0">
-                              <div class="row g-0">
+                              <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-phone" class="col-form-label">Mobile phone:</label>
+                                  <label for="profile-phone" class="col-form-label py-0">Mobile phone:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-phone" class="form-control" readonly value="+380 686 287 487">
@@ -74,9 +74,9 @@
                             </div>
 
                             <div class="mb-0">
-                              <div class="row g-0">
+                              <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-type" class="col-form-label">Type:</label>
+                                  <label for="profile-type" class="col-form-label py-0">Type:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-type" class="form-control" readonly value="individual">
@@ -85,9 +85,9 @@
                             </div>
 
                             <div class="mb-0">
-                              <div class="row g-0">
+                              <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-expertise" class="col-form-label">Expertise:</label>
+                                  <label for="profile-expertise" class="col-form-label py-0">Expertise:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-expertise" class="form-control" readonly value="Expertise 1">
@@ -96,9 +96,9 @@
                             </div>
 
                             <div class="mb-0">
-                              <div class="row g-0">
+                              <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-years-expertise" class="col-form-label">Years of Expertise:</label>
+                                  <label for="profile-years-expertise" class="col-form-label py-0">Years of Expertise:</label>
                                 </div>
                                 <div class="col">
                                   <input type="text" id="profile-years-expertise" class="form-control" readonly value="1-5 years">
@@ -107,9 +107,9 @@
                             </div>
 
                             <div class="mb-0">
-                              <div class="row g-0">
+                              <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
-                                  <label for="profile-cover-letter" class="col-form-label">Cover letter:</label>
+                                  <label for="profile-cover-letter" class="col-form-label py-0">Cover letter:</label>
                                 </div>
                                 <div class="col">
                                   <textarea id="profile-cover-letter" rows="5" class="form-control" readonly >Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt</textarea>
