--- a/src/authorization/registration-complete.html
+++ b/src/authorization/registration-complete.html
@@ -24,19 +24,19 @@
 
               <div class="row justify-content-center">
                 <div class="col-lg-9">
-                  <div class="sm mx-auto shadow rounded-3 text-center pt-20 pb-3 px-4">
+                  <div class="sm mx-auto shadow rounded-3 text-center pt-4 pb-3 px-4 mh-auto">
                     <form class="form ">
-                      <h1 class="h2 fw-bolder mb-4">
+                      <h1 class="h2 fw-bolder mb-30">
                         Complete your registration
                       </h1>
 
-                      <div class="form-label">
+                      <div class="form-label lh-base">
                         Please enter the 6 digit verification code <br>that was just emailed to you
                       </div>
 
                       <div class="row justify-content-center pt-4 pb-30">
                         <div class="col-sm-8 col-lg-7">
-                          <div class="pin d-flex justify-content-between">
+                          <div class="pin d-flex justify-content-between px-2">
                             <input type="text" class="form-control" >
                             <input type="text" class="form-control" >
                             <input type="text" class="form-control" >
@@ -58,7 +58,7 @@
                         </span>
                       </div>
 
-                      <div class="form-label fw-normal">
+                      <div class="form-label fw-normal lh-base">
                         <a href="#" class="text-primary fw-bold text-decoration-none mb-3">Click here</a> to resend the verification code. Please make sure to <br>check your spam folders in case you haven't received the code.
                       </div>
 
