--- a/src/authorization/registration-employer.html
+++ b/src/authorization/registration-employer.html
@@ -24,7 +24,7 @@
 
               <div class="row justify-content-center">
                 <div class="col-lg-9">
-                  <div class="sm mx-auto shadow rounded-3 text-center pt-20 pb-3 px-4">
+                  <div class="sm mx-auto shadow rounded-3 text-center pt-4 pb-3 px-4">
                     <form class="form ">
                       <h1 class="h2 fw-bolder mb-4">
                         Employer Registration
@@ -91,8 +91,8 @@
                           </div>
                           <div class="col-sm-8 col-lg-7">
                             <div class="position-relative">
-                              <div class="file d-sm-flex align-items-center">
-                                <a href="#" class="btn btn-light">
+                              <div class="file d-flex align-items-center justify-content-between">
+                                <a href="#" class="btn btn-light px-lg-4">
                                   Choose File
                                 </a>
                                 <span class="form-label">
