--- a/src/authorization/create-account.html
+++ b/src/authorization/create-account.html
@@ -20,7 +20,7 @@
             <div class="md bg-light shadow-lg rounded-3 mx-auto py-4 py-lg-6 px-2 p-lg-6 position-relative">
               <div class="row">
                 <div class="col-md-4 col-lg-6">
-                  <a href="index.html" class="logo logo-md d-block mb-5">
+                  <a href="index.html" class="logo logo-md d-block mb-5 mt-lg-36">
                     <img src="../images/logo.svg" alt="ZoomTender" class="img-fluid d-block mx-auto">
                   </a>
 
@@ -43,9 +43,9 @@
                 </div>
 
                 <div class="col-md-8 col-lg-6">
-                  <div class="shadow rounded-3 p-3 p-md-4 px-lg-6 pt-lg-5 pb-lg-6">
+                  <div class="shadow rounded-3 p-3 p-md-4 px-lg-3 px-xl-6 pt-lg-5 pb-lg-6 mt-lg-10">
                     <form class="form">
-                      <h1 class="h4 fw-bolder mb-4">
+                      <h1 class="h2 fw-bolder mb-4">
                         Create an account
                       </h1>
 
@@ -76,16 +76,16 @@
               </div>
 
               <div class="shadow rounded-3 mt-36 p-3 p-md-4 py-lg-5 px-lg-6">
-                <div class="row align-items-center">
+                <div class="row align-items-center g-0">
                   <div class="col-md-4 col-lg-5 mb-3 mb-lg-0">
                     <img src="../images/img-1.svg" alt="" class="img-fluid">
                   </div>
-                  <div class="col-md-8 col-lg-7">
-                    <h1 class="h4 fw-bolder">
+                  <div class="col-md-8 col-lg-8 ms-lg-n5 me-lg-n5">
+                    <h1 class="h2 fw-bolder mb-3">
                       What is a Tender?
                     </h1>
 
-                    <p class="fsz-18">
+                    <p class="fsz-18 mb-0 me-lg-n2">
                       A tender works like a reverse auction. A buyer can invite a tender to buy goods/services and vendor offering those good/sservices can bid on that tender. Once bidding is complete, the buyer may select a vendor with the lowest bid or some other selection criteria.
                     </p>
                   </div>
