--- a/src/authorization/registration-contractror-individual.html
+++ b/src/authorization/registration-contractror-individual.html
@@ -24,13 +24,13 @@
 
               <div class="row justify-content-center">
                 <div class="col-lg-9">
-                  <div class="sm mx-auto shadow rounded-3 text-center pt-20 pb-3 px-4">
+                  <div class="sm mx-auto shadow rounded-3 text-center pt-4 pb-3 px-4">
                     <form class="form ">
                       <h1 class="h2 fw-bolder mb-4">
                         Contractor Registration
                       </h1>
 
-                      <div class="mb-4">
+                      <div class="mb-4 pt-2">
                         <div class="form-check form-check-inline">
                           <input class="form-check-input" type="radio" name="registrationType" id="registration-individ" value="individual" checked>
                           <label class="form-check-label" for="registration-individ">Individual</label>
@@ -113,8 +113,8 @@
                           </div>
                           <div class="col-sm-8 col-lg-7">
                             <div class="position-relative">
-                              <div class="file d-sm-flex align-items-center">
-                                <a href="#" class="btn btn-light">
+                              <div class="file d-flex align-items-center justify-content-between">
+                                <a href="#" class="btn btn-light px-lg-4">
                                   Choose File
                                 </a>
                                 <span class="form-label">
@@ -128,13 +128,13 @@
                       </div>
 
                       <div class="mb-10">
-                        <div class="row justify-content-center align-items-center">
+                        <div class="row justify-content-center">
                           <div class="col-sm-4 col-lg-3 text-start text-sm-end mb-2 mb-sm-0">
                             <label for="registration-desc" class="col-form-label py-0">Description</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
                             <div class="position-relative">
-                              <textarea id="registration-desc" rows="4" class="form-control" placeholder="Description"></textarea>
+                              <textarea id="registration-desc" rows="5" class="form-control" placeholder="Description"></textarea>
                             </div>
                           </div>
                         </div>
